--- a/eaia/main/config.yaml
+++ b/eaia/main/config.yaml
@@ -1,4 +1,4 @@
-email: ...
+email: k38122735@gmail.com
 full_name: Harrison Chase
 name: Harrison
 background: Harrison is CEO and co-founder of LangChain. LangChain is a startup building tools for developers to build LLM applications.
